force-app/main/default/objects/Deal_Registration__c/Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Deal Registration</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>