force-app/main/default/objects/Deal_Registration__c/fields/Account_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_formula__c</fullName>
    <description>This field in for the profiles where we don&apos;t want to allow them to edit the filed and filed label should not be available on edit pabe.</description>
    <formula>Partner_Company_Name__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>