force-app/main/default/objects/Deal_Registration__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional Information about deal registraion.</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>