force-app/main/default/objects/Deal_Registration__c/fields/Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_line_2__c</fullName>
    <label>Address line-2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>