force-app/main/default/objects/Deal_Registration__c/fields/Approval_Process_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Definition_Name__c</fullName>
    <description>Name of the approval process through which record is going through. This field gets updated by batch class on hourly basis.</description>
    <label>Approval Process Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>