force-app/main/default/objects/Deal_Registration__c/fields/Approval_Request_Elapsed_Time_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Elapsed_Time_In_Days__c</fullName>
    <description>The total elapsed time in days between when the approval process instance was started and now.</description>
    <inlineHelpText>The total elapsed time in days between when the approval process was started and now.</inlineHelpText>
    <label>Approval Request Elapsed Time In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>