force-app/main/default/objects/Deal_Registration__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <description>This field contains the name of the step of approval process in which deal is currently.</description>
    <label>Approval Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>