force-app/main/default/objects/Deal_Registration__c/fields/Are_you_servicing_this_Account__c.field-meta.xml
<CustomField>
    <fullName>Are_you_servicing_this_Account__c</fullName>
    <label>Are you servicing this Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>