force-app/main/default/objects/Deal_Registration__c/fields/ATM_suppliers_hardware_and_software__c.field-meta.xml
<CustomField>
    <fullName>ATM_suppliers_hardware_and_software__c</fullName>
    <label>ATM suppliers (hardware and software)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>