force-app/main/default/objects/Deal_Registration__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>If you have a Campaign Code, enter it here.</description>
    <inlineHelpText>If you have a Campaign Code, enter it here.</inlineHelpText>
    <label>Campaign Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel_MDF-Demand-Program-Digital_2019 (No Event)</fullName>
                <color>#0B6FCE</color>
                <label>Channel_MDF-Demand-Program-Digital_2019 (No Event)</label>
            </value>
            <value>
                <fullName>Channel_Demand-Program_2019</fullName>
                <color>#78C953</color>
                <label>Channel_Demand-Program_2019</label>
            </value>
            <value>
                <fullName>Channel_Opportunity_2019</fullName>
                <color>#E27001</color>
                <label>Channel_Opportunity_2019</label>
            </value>
            <value>
                <fullName>Channel_MDF-Event_2019</fullName>
                <color>#A845DC</color>
                <label>Channel_MDF-Event_2019</label>
            </value>
            <value>
                <fullName>FS – Competitive Welcome</fullName>
                <color>#F3D904</color>
                <label>FS – Competitive Welcome</label>
            </value>
            <value>
                <fullName>Channel_Demand-Program_2018</fullName>
                <isActive>false</isActive>
                <label>Channel_Demand-Program_2018</label>
            </value>
            <value>
                <fullName>Channel_MDF-Demand-Program-Digital (No Event)</fullName>
                <isActive>false</isActive>
                <label>Channel_MDF-Demand-Program-Digital (No Event)</label>
            </value>
            <value>
                <fullName>Channel_MDF-Event_2018</fullName>
                <isActive>false</isActive>
                <label>Channel_MDF-Event_2018</label>
            </value>
            <value>
                <fullName>DNX-Welcome-Program_2018</fullName>
                <isActive>false</isActive>
                <label>DNX-Welcome-Program_2018</label>
            </value>
            <value>
                <fullName>FEB18 FIN Windows 10 Channel Partner Follow Up - 022118</fullName>
                <isActive>false</isActive>
                <label>FEB18 FIN Windows 10 Channel Partner Follow Up - 022118</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>