force-app/main/default/objects/Deal_Registration__c/fields/Channel_Operation_Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Channel_Operation_Review_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Operation Review Request</label>
    <type>Checkbox</type>
</CustomField>