force-app/main/default/objects/Deal_Registration__c/fields/Channel_Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>