force-app/main/default/objects/Deal_Registration__c/fields/Channel_Partner_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>