force-app/main/default/objects/Deal_Registration__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of End Customer</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>