force-app/main/default/objects/Deal_Registration__c/fields/Competitive_Opportunity_Overview__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Opportunity_Overview__c</fullName>
    <inlineHelpText>List all competitive products, software, service and other solutions that will be displaced.</inlineHelpText>
    <label>Competitive Opportunity Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>