force-app/main/default/objects/Deal_Registration__c/fields/Completed_milestones_pre_sales_activity__c.field-meta.xml
<CustomField>
    <fullName>Completed_milestones_pre_sales_activity__c</fullName>
    <inlineHelpText>Completed key milestones of pre-sales activity</inlineHelpText>
    <label>Completed milestones pre-sales activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>