force-app/main/default/objects/Deal_Registration__c/fields/Contact_in_CC__c.field-meta.xml
<CustomField>
    <fullName>Contact_in_CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copy to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations (Copy to)</relationshipLabel>
    <relationshipName>Deal_Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>