force-app/main/default/objects/Deal_Registration__c/fields/Core_Provider__c.field-meta.xml
<CustomField>
    <fullName>Core_Provider__c</fullName>
    <inlineHelpText>Core provider (e.g. FIS)</inlineHelpText>
    <label>Core Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>