force-app/main/default/objects/Deal_Registration__c/fields/Current_Approval_Submission_date_time__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Submission_date_time__c</fullName>
    <description>This field contains date &amp; time when deal is submitted to the current approval step.</description>
    <label>Current Approval Submission date &amp; time</label>
    <type>DateTime</type>
</CustomField>