force-app/main/default/objects/Deal_Registration__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <formula>IF(  AND( ISPICKVAL(Internal_Status__c, &apos;Sales Operation Approval&apos;), Partner_Industry__c == &apos;Financial&apos;), &apos;DR Financial Queue&apos;,  IF(AND( ISPICKVAL(Internal_Status__c, &apos;Sales Operation Approval&apos;), Partner_Industry__c == &apos;Hospitality&apos;), &apos;DR Hospitality Queue&apos;,  IF(AND( ISPICKVAL(Internal_Status__c, &apos;Sales Operation Approval&apos;), Partner_Industry__c == &apos;Retail&apos;), &apos;DR Retail Queue&apos;,  IF( AND( ISPICKVAL(Internal_Status__c, &apos;Sales Operation Approval&apos;),Is_Reassign_Approval_to_CAM__c == true) ,   NCR_Account_Manager__r.FirstName + &apos; &apos;+NCR_Account_Manager__r.LastName,  IF( ISPICKVAL(Internal_Status__c, &apos;CAM Approval&apos;), NCR_Account_Manager__r.FirstName + &apos; &apos;+NCR_Account_Manager__r.LastName,  IF( ISPICKVAL(Internal_Status__c, &apos;Sales Leader Approval&apos;),  NCR_Account_Senior_Manager__r.FirstName +&apos; &apos;+NCR_Account_Senior_Manager__r.LastName, &apos;&apos;) ) ) ) ) )</formula>
    <label>Current Approver</label>
    <type>Text</type>
</CustomField>