force-app/main/default/objects/Deal_Registration__c/fields/Current_installed_system__c.field-meta.xml
<CustomField>
    <fullName>Current_installed_system__c</fullName>
    <label>What is the current installed system?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>