force-app/main/default/objects/Deal_Registration__c/fields/Deal_Created_By_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_By_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Created By Distributor</label>
    <type>Checkbox</type>
</CustomField>