force-app/main/default/objects/Deal_Registration__c/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <description>Deal Name</description>
    <label>Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>