force-app/main/default/objects/Deal_Registration__c/fields/Deal_with_3_or_more_units__c.field-meta.xml
<CustomField>
    <fullName>Deal_with_3_or_more_units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal with 3 or more units</label>
    <type>Checkbox</type>
</CustomField>