force-app/main/default/objects/Deal_Registration__c/fields/Deal_with_3_or_more_units_Num__c.field-meta.xml
<CustomField>
    <fullName>Deal_with_3_or_more_units_Num__c</fullName>
    <label>Deal with 3 or more units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>