force-app/main/default/objects/Deal_Registration__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>Selected distributor name should be available in distributor picklist on partner account.</description>
    <inlineHelpText>Selected distributor name should be available in distributor picklist on partner account.</inlineHelpText>
    <label>Distributor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>