force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Channel_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Channel_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Channel Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations7</relationshipName>
    <type>Lookup</type>
</CustomField>