force-app/main/default/objects/Deal_Registration__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations (Distributor Contact)</relationshipLabel>
    <relationshipName>Deal_Registrations3</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>