force-app/main/default/objects/Deal_Registration__c/fields/End_Customer_Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Key_Contact_Name__c</fullName>
    <label>Key Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>