force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>