force-app/main/default/objects/Deal_Registration__c/fields/Expiration_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Temp__c</fullName>
    <formula>IF( Partner_Industry__c == &apos;Financial&apos;,  Approval_Completion_Date__c +180, Approval_Completion_Date__c +90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date Temp</label>
    <type>DateTime</type>
</CustomField>