force-app/main/default/objects/Deal_Registration__c/fields/Extension_Increment_Count__c.field-meta.xml
<CustomField>
    <fullName>Extension_Increment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extension Increment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>