force-app/main/default/objects/Deal_Registration__c/fields/Extension_Period__c.field-meta.xml
<CustomField>
    <fullName>Extension_Period__c</fullName>
    <label>Extension Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 Day Extension</fullName>
            </value>
            <value>
                <fullName>180 Day Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>