force-app/main/default/objects/Deal_Registration__c/fields/Extension_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Submission_Date__c</fullName>
    <label>Extension Submission Date</label>
    <type>DateTime</type>
</CustomField>