force-app/main/default/objects/Deal_Registration__c/fields/Funnel_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the opportunity which has been created by the conversion of deal registration to opportunity.</description>
    <inlineHelpText>Link to the opportunity which has been created by the conversion of deal registration to opportunity.</inlineHelpText>
    <label>Funnel Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Special Bid Registrations</relationshipLabel>
    <relationshipName>Special_Bid_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>