force-app/main/default/objects/Deal_Registration__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Sales Operation Approval</fullName>
            </value>
            <value>
                <fullName>CAM Approval</fullName>
            </value>
            <value>
                <fullName>Sales Leader Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>1st Level Approval</fullName>
                <isActive>false</isActive>
                <label>1st Level Approval</label>
            </value>
            <value>
                <fullName>2nd Level Approval</fullName>
                <isActive>false</isActive>
                <label>2nd Level Approval</label>
            </value>
            <value>
                <fullName>Created</fullName>
                <isActive>false</isActive>
                <label>Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>