force-app/main/default/objects/Deal_Registration__c/fields/Is_NCR_servicing_the_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_NCR_servicing_the_Account__c</fullName>
    <label>Is NCR servicing the Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>