force-app/main/default/objects/Deal_Registration__c/fields/Is_Reassign_Approval_to_CAM__c.field-meta.xml
<CustomField>
    <fullName>Is_Reassign_Approval_to_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reassign Approval to CAM ?</label>
    <type>Checkbox</type>
</CustomField>