force-app/main/default/objects/Deal_Registration__c/fields/Is_this_part_of_an_RFP__c.field-meta.xml
<CustomField>
    <fullName>Is_this_part_of_an_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this part of an RFP?</label>
    <type>Checkbox</type>
</CustomField>