force-app/main/default/objects/Deal_Registration__c/fields/Is_Workflow_Scheduled_for_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>Is_Workflow_Scheduled_for_Sales_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Workflow Scheduled for Sales Leader</label>
    <type>Checkbox</type>
</CustomField>