force-app/main/default/objects/Deal_Registration__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field maps if a DR Record is Finally Approved.</description>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>