force-app/main/default/objects/Deal_Registration__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <formula>Partner_Company_Name__r.Master_Customer_Number__c</formula>
    <label>Master Customer Number</label>
    <type>Text</type>
</CustomField>