force-app/main/default/objects/Deal_Registration__c/fields/Name_of_Account_Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Account_Financial_Institution__c</fullName>
    <label>Name of Account/Financial Institution</label>
    <length>250</length>
    <type>Text</type>
</CustomField>