force-app/main/default/objects/Deal_Registration__c/fields/Names_of_the_key_contacts__c.field-meta.xml
<CustomField>
    <fullName>Names_of_the_key_contacts__c</fullName>
    <inlineHelpText>Provide the names of the key contacts including Technical, Sales and Decision Maker</inlineHelpText>
    <label>Names of the key contacts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>