force-app/main/default/objects/Deal_Registration__c/fields/NCR_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>NCR_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCR_Account_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>