force-app/main/default/objects/Deal_Registration__c/fields/No_which_Service_option__c.field-meta.xml
<CustomField>
    <fullName>No_which_Service_option__c</fullName>
    <label>No, which Service option?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Referral</fullName>
            </value>
            <value>
                <fullName>Shared Services</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>