force-app/main/default/objects/Deal_Registration__c/fields/Number_of_branches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_branches__c</fullName>
    <label>Number of branches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>