force-app/main/default/objects/Deal_Registration__c/fields/Other_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Other_End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer Account Name (Not in SF)</label>
    <referenceTo>End_Customer_Account_Name__c</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>