force-app/main/default/objects/Deal_Registration__c/fields/Partner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner&apos;s account name.</description>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations (Partner Company Name)</relationshipLabel>
    <relationshipName>Deal_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>