force-app/main/default/objects/Deal_Registration__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations (Partner Contact)</relationshipLabel>
    <relationshipName>Deal_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>