force-app/main/default/objects/Deal_Registration__c/fields/Partner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Opportunity__c</fullName>
    <label>Partner Opportunity #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>