force-app/main/default/objects/Deal_Registration__c/fields/Partner_Opportunity_Formula__c.field-meta.xml
<CustomField>
    <fullName>Partner_Opportunity_Formula__c</fullName>
    <formula>Funnel_Opportunity__r.Opportunity_Number__c</formula>
    <label>Partner Opportunity #</label>
    <type>Text</type>
</CustomField>