force-app/main/default/objects/Deal_Registration__c/fields/Partner_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Submission_Date__c</fullName>
    <label>Partner Submission Date</label>
    <type>DateTime</type>
</CustomField>