force-app/main/default/objects/Deal_Registration__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>Primary Competitor for current deal / opportunity.</description>
    <label>Who is the competition?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>