force-app/main/default/objects/Deal_Registration__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations (Primary Contact Name)</relationshipLabel>
    <relationshipName>Primary_Contact_Name</relationshipName>
    <type>Lookup</type>
</CustomField>