force-app/main/default/objects/Deal_Registration__c/fields/Primary_Contact_NameText__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_NameText__c</fullName>
    <label>Primary Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>