force-app/main/default/objects/Deal_Registration__c/fields/Primary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solution__c</fullName>
    <description>drop down menu with Solution Offerings</description>
    <label>Primary Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ADVANCED BACK OFFICE</fullName>
            </value>
            <value>
                <fullName>Aloha Quick Service</fullName>
            </value>
            <value>
                <fullName>Aloha Table Service</fullName>
            </value>
            <value>
                <fullName>ANDC</fullName>
            </value>
            <value>
                <fullName>ATM 20 series</fullName>
            </value>
            <value>
                <fullName>ATM 30 series</fullName>
            </value>
            <value>
                <fullName>ATM 80 series</fullName>
            </value>
            <value>
                <fullName>ATM based security</fullName>
            </value>
            <value>
                <fullName>Branch Transformation</fullName>
            </value>
            <value>
                <fullName>CFR - OPTIC</fullName>
            </value>
            <value>
                <fullName>CFR - RPOS</fullName>
            </value>
            <value>
                <fullName>CFR - RPOS - Subscription</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>CONNECTED PAYMENTS</fullName>
            </value>
            <value>
                <fullName>Cross - Network Security Services (NSS)</fullName>
            </value>
            <value>
                <fullName>Cross - POS Hardware</fullName>
            </value>
            <value>
                <fullName>Cross - Retail Kiosks</fullName>
            </value>
            <value>
                <fullName>CxMarketing</fullName>
            </value>
            <value>
                <fullName>Digital Banking</fullName>
            </value>
            <value>
                <fullName>Encor POS Software</fullName>
            </value>
            <value>
                <fullName>FastLane Mobile Shopper</fullName>
            </value>
            <value>
                <fullName>FDMM - Connected Payments</fullName>
            </value>
            <value>
                <fullName>FDMM - ENCOR</fullName>
            </value>
            <value>
                <fullName>FDMM - Self Checkout (SCO)</fullName>
            </value>
            <value>
                <fullName>FDMM - Self Checkout (SCO) AIIP</fullName>
            </value>
            <value>
                <fullName>Financial Hardware</fullName>
                <isActive>false</isActive>
                <label>Financial Hardware</label>
            </value>
            <value>
                <fullName>Financial Kiosks</fullName>
            </value>
            <value>
                <fullName>Financial Software</fullName>
                <isActive>false</isActive>
                <label>Financial Software</label>
            </value>
            <value>
                <fullName>Freshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>