force-app/main/default/objects/Deal_Registration__c/fields/Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Probability_Score__c</fullName>
    <description>Probability Score</description>
    <label>Probability Score %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>