force-app/main/default/objects/Deal_Registration__c/fields/Projected_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Projected_Opportunity_Value__c</fullName>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>